--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-details/termin-details.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-details/termin-details.component.scss
@@ -7,9 +7,10 @@
   font-size: 16px;
 }
 
-.border-bottom{
-  padding: 8px 0px;
-  border-bottom: 1px solid #ffffff1c;
+.border-top{
+  margin-top: 8px;
+  padding-top: 8px;
+  border-top: 1px solid #ffffff1c;
 }
 
 .response-div{
