--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/create-termin-modal/create-termin-modal.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/create-termin-modal/create-termin-modal.component.html
@@ -28,6 +28,9 @@
             placeholder="Termin Beschreibung"></ion-input>
         </ion-item>
         <ion-item>
+          <ion-button (click)="uploadImage()">Bild hochladen</ion-button>
+        </ion-item>
+        <ion-item>
           <ion-select label="Termin Art" label-placement="stacked" formControlName="terminArt">
             <ion-select-option *ngFor="let terminArt of data.terminArtDropdown"
               [value]="terminArt.value">{{terminArt.text}}</ion-select-option>
