--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-details/termin-details.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-details/termin-details.component.scss
@@ -53,3 +53,11 @@
   width: 100%;
   object-fit: cover;
 }
+
+// .button-div{
+//   ion-button{
+//     display: block;
+//   }
+//   display: flex;
+//   justify-content: end;
+// }
