--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-response-modal/termin-response-modal.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-response-modal/termin-response-modal.component.html
@@ -5,18 +5,28 @@
     </ion-buttons>
     <ion-title>Termin Rückmeldung</ion-title>
     <ion-buttons slot="end">
-      <!-- <ion-button (click)="confirm()" [strong]="true"
-        [disabled]="!formGroup.dirty || formGroup.invalid">Erstellen</ion-button> -->
+      <ion-button (click)="confirm()" [strong]="true"
+        [disabled]="!formGroup.dirty || formGroup.invalid">Speichern</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  <!-- <ng-container *ngIf="data$ | async as data; else loading">
-    <pre>{{formGroup.value | json}}</pre>
-
-    <form [formGroup]="formGroup"></form>
-
-  </ng-container> -->
+  <ng-container *ngIf="dataTermin; else loading">
+    <form [formGroup]="formGroup">
+      <ion-list>
+        <ion-item>
+          <ion-select label="Rückmeldung" label-placement="stacked" formControlName="zugesagt">
+            <ion-select-option *ngFor="let response of dataTermin.responseDropdownValues"
+              [value]="response.value" [disabled]="response.text === 'Nicht Zurückgemeldet'">{{response.text}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item>
+          <ion-input formControlName="kommentarZusage" labelPlacement="stacked" label="Kommentar Zusage"
+            placeholder="Kommentar Zusage"></ion-input>
+        </ion-item>
+      </ion-list>
+    </form>
+  </ng-container>
 
   <ng-template #loading>
     <app-loader></app-loader>
