--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/history-termin-liste/history-termin-liste.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/history-termin-liste/history-termin-liste.component.html
@@ -3,7 +3,7 @@
     <!-- <pre>{{data | json}}</pre> -->
 
     <ion-list>
-      <ion-searchbar #searchBar show-clear-button="always" placeholder="Suche Account"
+      <ion-searchbar #searchBar show-clear-button="always" placeholder="Suche Termin"
         (ionInput)="search($event)"></ion-searchbar>
 
       <app-termin-item *ngFor="let termin of data.terminData" [terminId]="termin.terminId"
@@ -16,7 +16,9 @@
       </app-termin-item>
 
       <ng-container *ngIf="data.terminData.length === 0">
-        Kein Ergebnis
+        <div style="padding: 8px;">
+          Kein Termine
+        </div>
       </ng-container>
     </ion-list>
   </ng-container>
