--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-return-message-details/termin-return-message-details.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-return-message-details/termin-return-message-details.component.html
@@ -1,11 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-button (click)="cancel()">Zurück</ion-button>
     </ion-buttons>
-    <ion-title>
-      Termin Rückmeldung Details
-    </ion-title>
+    <ion-title>Termin Rückmeldung Details</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="confirm()" [strong]="true"
+        [disabled]="!formGroup.dirty || formGroup.invalid">Speichern</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -16,6 +18,41 @@
     </ion-toolbar>
   </ion-header>
 
-  Dies wird die Terminliste.
+  <ng-container *ngIf="response; else loading">
+    <div style="margin-bottom: 8px;">
+      <ion-text *ngIf="response.vornameOther || response.nachnameOther" class="default-color ion-text-wrap" style="font-size: 15px; color: white;">
+        <b>Rückmeldung durch:</b> {{response.vornameOther}} {{response.nachnameOther}} <br>
+      </ion-text>
+      <ion-note color="medium" class="ion-text-wrap">
+        Letzte Rückmeldung: {{response['letzteRückmeldung'] | date : 'dd.MM.YYYY HH:mm'}}
+      </ion-note> 
+    </div>
+
+    <form [formGroup]="formGroup">
+      <ion-list>
+        <ion-item>
+          <ion-select label="Rückmeldung" label-placement="stacked" formControlName="zugesagt">
+            <ion-select-option *ngFor="let responseDropdown of responseDropdownValues"
+              [value]="responseDropdown.value" [disabled]="responseDropdown.text === 'Nicht Zurückgemeldet'">{{responseDropdown.text}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item>
+          <ion-textarea [autoGrow]="true" formControlName="kommentarZusage" labelPlacement="stacked" label="Kommentar Zusage"
+            placeholder="Kommentar Zusage"></ion-textarea>
+        </ion-item>
+        <ion-item>
+          <ion-checkbox formControlName="istAnwesend">Anwesend?</ion-checkbox>
+        </ion-item>
+        <ion-item>
+          <ion-textarea [autoGrow]="true" formControlName="kommentarAnwesenheit" labelPlacement="stacked" label="Kommentar Anwesenheit"
+            placeholder="Kommentar Anwesenheit"></ion-textarea>
+        </ion-item>
+      </ion-list>
+    </form>
+  </ng-container>
+
+  <ng-template #loading>
+    <app-loader></app-loader>
+  </ng-template>
 
 </ion-content>
