--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-return-messages/termin-return-messages.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-return-messages/termin-return-messages.component.scss
@@ -18,3 +18,10 @@
 .triangle-red{
   border-left-color: red;
 }
+
+.main-details{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
