--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-anwesenheit-control-modal/termin-anwesenheit-control-modal.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-anwesenheit-control-modal/termin-anwesenheit-control-modal.component.html
@@ -12,7 +12,16 @@
 </ion-header>
 <ion-content class="ion-padding">
   <ng-container *ngIf="dataResponses; else loading">
-    <pre>{{dataResponses | json}}</pre>
+    <pre>{{formGroup.value | json}}</pre>
+    <form [formGroup]="formGroup">
+      <ng-container formArrayName="items">
+        <div *ngFor="let item of dataResponses; let i = index" [formGroupName]="i">
+          <ion-item>
+            <ion-checkbox formControlName="istAnwesend">{{item.vorname}} {{item.nachname}}</ion-checkbox>
+          </ion-item>
+        </div>
+      </ng-container>
+    </form>
   </ng-container>
 
   <ng-template #loading>
