--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/dashboard/dashboard.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/dashboard/dashboard.component.html
@@ -16,12 +16,18 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
   <ng-container *ngIf="data$ | async as data; else loading">
     Dies wird das Dashboard.
     <pre>{{data | json}}</pre>
   </ng-container>
 
   <ng-template #loading>
-    <app-loader></app-loader>
+    <ng-container *ngIf="!isRefreshing">
+      <app-loader></app-loader>
+    </ng-container>
   </ng-template>
 </ion-content>
