finished dashboard and started styling

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/presentational/dashboard-termin-item/dashboard-termin-item.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/presentational/dashboard-termin-item/dashboard-termin-item.component.scss
@@ -2,15 +2,8 @@
   color: #6aa0ff;
 }
 
-.nicht-angenommen{
-  color: #b9ae49
-}
-
-.abgesagt{
+.red{
   color: red;
 }
 
-.image{
-  width: 60px;
-  height: 40px;
-}
+
