--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/container/dashboard/dashboard.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/container/dashboard/dashboard.component.html
@@ -21,6 +21,7 @@
   </ion-refresher>
 
   <ng-container *ngIf="data$ | async as data; else loading">
+    <!-- <pre>{{data | json}}</pre> -->
     <ion-card>
       <ion-card-header>
         <ion-card-title>Nächste Termine</ion-card-title>
@@ -29,32 +30,38 @@
     
       <ion-card-content>
         <ion-list>
-          
+          <app-dashboard-termin-item *ngFor="let termin of data.nextTermins" [terminId]="termin.terminId" [terminName]="termin.name" [terminStartTime]="termin.startZeit"
+            [terminEndTime]=" termin.endZeit" [terminArt]="termin.terminArt | dropdown : data.terminArtDropdownItems" 
+            [terminResponse]="termin.zugesagt | dropdown : data['rückmeldungsDropdownItems']" (openTermin)="openTermin(termin.terminId)"></app-dashboard-termin-item>
         </ion-list>
       </ion-card-content>
     </ion-card>
 
     <ion-card>
       <ion-card-header>
-        <ion-card-title>Nächste Geburtstage</ion-card-title>
+        <ion-card-title>Geburtstage</ion-card-title>
+        <ion-card-subtitle>Liste aller Geburtstage der letzten 14 Tage und der nächsten 7 Tage.</ion-card-subtitle>
       </ion-card-header>
-    
       <ion-card-content>
-        Here's a small text description for the card content. Nothing more, nothing less.
+        <ion-list>
+          <app-dashboard-birthday-item *ngFor="let birthday of data.birthdayList" [name]="birthday.name" [image]="birthday.image" [birthday]="birthday.birthday"></app-dashboard-birthday-item>
+        </ion-list>
       </ion-card-content>
     </ion-card>
 
     <ion-card>
       <ion-card-header>
         <ion-card-title>Internetpräsenz Orchester</ion-card-title>
+        <ion-card-subtitle>Verlinkungen zu anderen Internetpräsenzen des Orchesters</ion-card-subtitle>
       </ion-card-header>
-    
-      <ion-card-content>
-        Here's a small text description for the card content. Nothing more, nothing less.
+      <ion-card-content class="links">
+        <a href="https://www.facebook.com/JahnBockum/" target=”_blank”><img src="/assets/facebook.png"></a>
+        <a href="https://www.instagram.com/blasorchester_tv_jahn_bockum/" target=”_blank”><img src="/assets/instagram.png" ></a>
+        <a href="https://www.youtube.com/channel/UCr1jrRRIyST4XGAk8y0_RMg" target=”_blank”><img src="/assets/youtube.png" ></a>
+        <a href="https://blasorchester-tvjahnbockum.de/" target=”_blank”> <img src="/assets/internet.png" ></a>
       </ion-card-content>
     </ion-card>
 
-    <pre>{{data | json}}</pre>
   </ng-container>
 
   <ng-template #loading>
