--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/presentational/dashboard-termin-item/dashboard-termin-item.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/presentational/dashboard-termin-item/dashboard-termin-item.component.html
@@ -1,22 +1,12 @@
 <ion-item [button]="true" detail="false" (click)="emitOpenTermin()" class="default-color">
   <ion-label>
     <h2>
-      <strong *ngIf="terminStatus !== 'Abgesagt'; else abgesagt"> {{terminName}}</strong>
-      <ng-template #abgesagt>
-        <s><strong>{{terminName}}</strong></s>
-      </ng-template>
+      <strong> {{terminName}}</strong>
     </h2>
-    <ion-text class="default-color ion-text-wrap" style="font-size: 14px; color: white;">Datum: {{terminStartTime | date
-      :
-      'dd.MM.YYYY'}}: {{terminStartTime | date :
+    <ion-text class="default-color ion-text-wrap" style="font-size: 14px; color: white;">Datum: {{terminStartTime | date: 'dd.MM.YYYY'}}: {{terminStartTime | date :
       'HH:mm'}}-{{terminEndTime | date : 'HH:mm'}}</ion-text><br />
-    <ion-note color="medium" class="ion-text-wrap">
-      <ng-container *ngIf="!(terminEndTime < dateNow)">
-        Mein Status: {{terminResponse}}
-        <ion-icon class="alert-icon" *ngIf="(terminResponse === 'Nicht Zurückgemeldet')" name="alert-outline"
-          color="danger">
-        </ion-icon><br>
-      </ng-container>
+    <ion-note color="medium" class="ion-text-wrap" >
+      Mein Status: <span [class.red]="(terminResponse === 'Nicht Zurückgemeldet')">{{terminResponse}}</span>
     </ion-note>
   </ion-label>
   <div class="metadata-end-wrapper" style="margin: 0;" slot="end">
